// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Get Functions Breakpoints 1`] = `
Array [
  Object {
    "comment": "",
    "name": "$bp--xsmall",
    "value": "380px",
  },
  Object {
    "comment": "",
    "name": "$bp--small",
    "value": "450px",
  },
  Object {
    "comment": "",
    "name": "$bp--medium",
    "value": "700px",
  },
  Object {
    "comment": "",
    "name": "$bp--large",
    "value": "900px",
  },
  Object {
    "comment": "",
    "name": "$bp--xlarge",
    "value": "1100px",
  },
  Object {
    "comment": "",
    "name": "$bp--xxlarge",
    "value": "1300px",
  },
  Object {
    "comment": "",
    "name": "$bp--xxxlarge",
    "value": "1600px",
  },
]
`;

exports[`Data Get Functions Colors 1`] = `
Array [
  Object {
    "comment": "",
    "name": "$c-blue--light",
    "value": "hsl(165, 26%, 85%)",
  },
  Object {
    "comment": "",
    "name": "$c-blue",
    "value": "hsl(200, 55%, 19%)",
  },
  Object {
    "comment": "",
    "name": "$c-green",
    "value": "hsl(159, 20%, 17%)",
  },
  Object {
    "comment": "",
    "name": "$c-iron",
    "value": "hsl(240, 3%, 85%)",
  },
  Object {
    "comment": "",
    "name": "$c-yellow",
    "value": "hsl(52, 74%, 54%)",
  },
  Object {
    "comment": "",
    "name": "$c-white",
    "value": "white",
  },
  Object {
    "comment": "",
    "name": "$c-gray--dark",
    "value": "hsl(0, 0%, 40%)",
  },
  Object {
    "comment": "",
    "name": "$c-black",
    "value": "black",
  },
]
`;

exports[`Data Get Functions Colors 2`] = `
Array [
  Object {
    "comment": "",
    "name": "$c-blue--light",
    "value": "rgb(207, 227, 222)",
  },
  Object {
    "comment": "",
    "name": "$c-blue",
    "value": "rgb(22, 57, 75)",
  },
  Object {
    "comment": "",
    "name": "$c-green",
    "value": "rgb(35, 52, 46)",
  },
  Object {
    "comment": "",
    "name": "$c-iron",
    "value": "rgb(216, 216, 218)",
  },
  Object {
    "comment": "",
    "name": "$c-yellow",
    "value": "rgb(225, 201, 51)",
  },
  Object {
    "comment": "",
    "name": "$c-white",
    "value": "rgb(255, 255, 255)",
  },
  Object {
    "comment": "",
    "name": "$c-gray--dark",
    "value": "rgb(102, 102, 102)",
  },
  Object {
    "comment": "",
    "name": "$c-black",
    "value": "rgb(0, 0, 0)",
  },
]
`;

exports[`Data Get Functions Colors 3`] = `
Array [
  Object {
    "comment": "",
    "name": "$c-blue--light",
    "value": "#CFE3DE",
  },
  Object {
    "comment": "",
    "name": "$c-blue",
    "value": "#16394B",
  },
  Object {
    "comment": "",
    "name": "$c-green",
    "value": "#23342E",
  },
  Object {
    "comment": "",
    "name": "$c-iron",
    "value": "#D8D8DA",
  },
  Object {
    "comment": "",
    "name": "$c-yellow",
    "value": "#E1C933",
  },
  Object {
    "comment": "",
    "name": "$c-white",
    "value": "#FFFFFF",
  },
  Object {
    "comment": "",
    "name": "$c-gray--dark",
    "value": "#666666",
  },
  Object {
    "comment": "",
    "name": "$c-black",
    "value": "#000000",
  },
]
`;

exports[`Data Get Functions DeviceWidths 1`] = `
Array [
  Object {
    "name": "iPhone Portrait",
    "width": 320,
  },
  Object {
    "name": "Galaxy Nexus Portrait",
    "width": 360,
  },
  Object {
    "name": "iPhone 6 Portrait",
    "width": 375,
  },
  Object {
    "name": "iPhone 6 Plus Portrait",
    "width": 414,
  },
  Object {
    "name": "Galaxy Note 3 Portrait",
    "width": 540,
  },
  Object {
    "name": "iPhone Landscape",
    "width": 568,
  },
  Object {
    "name": "Google Nexus 7 Portrait",
    "width": 604,
  },
  Object {
    "name": "Galaxy Nexus Landscape",
    "width": 640,
  },
  Object {
    "name": "iPhone 6 Landscape",
    "width": 667,
  },
  Object {
    "name": "iPhone 6 Plus Landscape",
    "width": 738,
  },
  Object {
    "name": "iPad Portrait",
    "width": 768,
  },
  Object {
    "name": "Galaxy Note 3 Landscape",
    "width": 960,
  },
  Object {
    "name": "Google Nexus 7 Landscape",
    "width": 966,
  },
  Object {
    "name": "iPad Landscape",
    "width": 1024,
  },
  Object {
    "name": "11\\" MacBook Air",
    "width": 1366,
  },
  Object {
    "name": "13\\" MacBook Air",
    "width": 1440,
  },
  Object {
    "name": "21.5\\" iMac",
    "width": 1980,
  },
]
`;

exports[`Data Get Functions Transitions 1`] = `
Array [
  Object {
    "comment": "",
    "name": "$trans-opacity__time",
    "value": "0.3s",
  },
  Object {
    "comment": "",
    "name": "$trans-opacity__function",
    "value": "ease-in",
  },
  Object {
    "comment": "convenience variable for using both",
    "name": "$trans-opacity",
    "value": "$trans-opacity__time $trans-opacity__function",
  },
  Object {
    "comment": "",
    "name": "$trans-move__time",
    "value": "0.3s",
  },
  Object {
    "comment": "",
    "name": "$trans-move__function",
    "value": "ease-in",
  },
  Object {
    "comment": "convenience variable for using both",
    "name": "$trans-move",
    "value": "$trans-opacity__time $trans-move__function",
  },
]
`;

exports[`Data Get Functions getFontFamilies 1`] = `
Array [
  Object {
    "comment": "Avenir Light",
    "name": "$ff--avenir--light",
    "value": "'AvenirLight', sans-serif",
  },
  Object {
    "comment": "Avenir Medium",
    "name": "$ff--avenir--medium",
    "value": "'AvenirMedium', sans-serif",
  },
  Object {
    "comment": "Din Condensed",
    "name": "$ff--din-condensed",
    "value": "'DinCondensed', sans-serif",
  },
]
`;

exports[`Data Get Functions getFontSizes 1`] = `
Array [
  Object {
    "comment": "",
    "name": "$fs--xxl",
    "value": "2.25rem",
  },
  Object {
    "comment": "",
    "name": "$fs--xl",
    "value": "1.75rem",
  },
  Object {
    "comment": "",
    "name": "$fs--l",
    "value": "1.25rem",
  },
  Object {
    "comment": "",
    "name": "$fs--m",
    "value": "1rem",
  },
  Object {
    "comment": "",
    "name": "$fs--s",
    "value": ".875rem",
  },
  Object {
    "comment": "",
    "name": "$fs--xs",
    "value": ".75rem",
  },
  Object {
    "comment": "",
    "name": "$fs--xxs",
    "value": ".625rem",
  },
]
`;

exports[`Data Get Functions getSpacings 1`] = `
Array [
  Object {
    "comment": "",
    "name": "$spacing--xs",
    "value": ".5rem",
  },
  Object {
    "comment": "",
    "name": "$spacing--s",
    "value": ".75rem",
  },
  Object {
    "comment": "",
    "name": "$spacing--m",
    "value": "1rem",
  },
  Object {
    "comment": "",
    "name": "$spacing--l",
    "value": "1.5rem",
  },
  Object {
    "comment": "",
    "name": "$spacing--xl",
    "value": "2rem",
  },
  Object {
    "comment": "",
    "name": "$spacing--xxl",
    "value": "3.3rem",
  },
  Object {
    "comment": "",
    "name": "$spacing--xxxl",
    "value": "5rem",
  },
]
`;
